fixed mobileview, still need to figure out spacing on right

--- a/src/style/Experince.module.css
+++ b/src/style/Experince.module.css
@@ -11,15 +11,14 @@
 }
 
 img {
-  width: 5rem;
+  width: 4.5rem;
 }
-
 .flexcolumn {
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  padding-left: 15rem;
-  padding-right: 15rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
   padding-bottom: 3rem;
   padding-top: 3rem;
   background-color: var(--tertiary);
@@ -39,4 +38,20 @@ h1 {
 p {
   margin: 0;
   padding: 0;
+}
+
+@media (min-width: 768px) {
+  .flexcolumn {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    padding-left: 15rem;
+    padding-right: 15rem;
+    padding-bottom: 3rem;
+    padding-top: 3rem;
+    background-color: var(--tertiary);
+  }
+  img {
+    width: 5rem;
+  }
 }
