--- a/src/style/Grade.css
+++ b/src/style/Grade.css
@@ -47,12 +47,11 @@
   padding-left: 5rem;
   padding-right: 5rem;
 }
-.grade-flex :nth-child(2) {
-  align-self: flex-start;
-}
+
 .grades-flex {
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 2.5rem;
 }
 
@@ -103,5 +102,9 @@
     display: flex;
     flex-direction: column;
     gap: 2.5rem;
+  }
+
+  .grade-flex > :nth-child(2) {
+    order: 1;
   }
 }
