--- a/src/style/contact.css
+++ b/src/style/contact.css
@@ -1,54 +1,33 @@
 .contact {
-  padding-left: 20rem;
-  padding-right: 20rem;
+  display: flex;
+  padding-left: 1rem;
+  padding-right: 1rem;
   justify-content: center;
   justify-items: center;
   margin-top: 8rem;
   margin-bottom: 8rem;
 }
+
 .contact-box {
   background-color: var(--tertiary);
   border: 10px solid var(--tertiary);
   border-radius: 10px;
-}
-
-.contact_flex_column {
-  display: grid;
-  justify-items: center;
-  gap: 2rem;
-}
-.contact-grid {
-  display: grid;
-  grid-template-columns: 0.8fr 1fr 0.8fr;
-  justify-items: center;
-}
-
-.contact-grid :first-child {
-  grid-column: 2;
-}
-
-.contact-grid :nth-child(2) {
-  justify-self: center;
-  grid-column: 2;
-}
-
-.contact-grid :nth-child(3) {
-  justify-self: left;
-  grid-column: 3;
-  grid-row: 1/3;
-  align-self: center;
-  justify-self: left;
+  text-align: center;
 }
 
 .contact-flex {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  /* align-items: center; */
+  padding-left: 2rem;
+  padding-right: 2rem;
   gap: 2rem;
 }
 
 .arrow {
   position: absolute;
-  margin-top: 2rem;
+  margin-top: 4rem;
+  margin-left: -3rem;
 }
 
 .contact_arrow {
@@ -56,4 +35,63 @@
   flex-direction: row;
   justify-items: center;
   position: relative;
+  padding-left: 6rem;
+  margin-bottom: 2rem;
+}
+
+.contact_header {
+  width: 80%;
+  text-align: center;
+}
+
+@media (min-width: 768px) {
+  .contact {
+    padding-left: 20rem;
+    padding-right: 20rem;
+    justify-content: center;
+    justify-items: center;
+    margin-top: 8rem;
+    margin-bottom: 8rem;
+  }
+  .contact-box {
+    background-color: var(--tertiary);
+    border: 10px solid var(--tertiary);
+    border-radius: 10px;
+  }
+
+  .contact_flex_column {
+    display: grid;
+    justify-items: center;
+    gap: 2rem;
+  }
+  .contact-grid {
+    display: grid;
+    grid-template-columns: 0.8fr 1fr 0.8fr;
+    justify-items: center;
+  }
+
+  .contact-grid :first-child {
+    grid-column: 2;
+  }
+
+  .contact-grid :nth-child(2) {
+    justify-self: center;
+    grid-column: 2;
+  }
+
+  .contact-grid :nth-child(3) {
+    justify-self: left;
+    grid-column: 3;
+    grid-row: 1/3;
+    align-self: center;
+    justify-self: left;
+  }
+
+  .contact-flex {
+    flex-direction: row;
+  }
+
+  .contact_header {
+    width: 100%;
+  }
 }
